fix: modify css selector to make images center-aligned

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -158,12 +158,10 @@ main {
     }
   }
 
-  p {
-    > a.popup {
+  a.popup {
       &:not(.normal):not(.left):not(.right) {
         @include mx.align-center;
       }
-    }
   }
 
   .categories,
